# SlicerCBM

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md
BrainMaterialProperties/: BrainMaterialProperties.py  CMakeLists.txt
BrainMaterialProperties/Resources/UI/: BrainMaterialProperties.ui
BrainMeshSurfaceCellsSelection/: BrainMeshSurfaceCellsSelection.py  CMakeLists.txt
BrainMeshSurfaceCellsSelection/Resources/UI/: BrainMeshSurfaceCellsSelection.ui
BrainSurfaceNeighbouringCellsSelection/: BrainSurfaceNeighbouringCellsSelection.py  CMakeLists.txt
BrainSurfaceNeighbouringCellsSelection/Resources/UI/: BrainSurfaceNeighbouringCellsSelection.ui
ComputationalGridGenerator/: CMakeLists.txt  ComputationalGridGenerator.py
ComputationalGridGenerator/ComputationalGridGenerator/: ComputationalGridGenerator.py
ComputationalGridGenerator/ComputationalGridGenerator/Resources/UI/: ComputationalGridGenerator.ui
CranCreator/: CMakeLists.txt  CranCreator.py
CranCreator/Resources/UI/: CranCreator.ui
CreateHeadTetrahedralGrid/: CMakeLists.txt  CreateHeadTetrahedralGrid.py
CreateHeadTetrahedralGrid/Resources/UI/: CreateHeadTetrahedralGrid.ui
DTISegmentation/: CMakeLists.txt  DTISegmentation.py  DTISegmentation.xml  README.md
Docs/: index.md  test.md
ElectricalConductivity/: CMakeLists.txt  ElectricalConductivity.py  ElectricalConductivity.xml  README.md
ElectrodesToMarkups/: CMakeLists.txt  ElectrodesToMarkups.py  README.md
ElectrodesToMarkups/Resources/UI/: ElectrodesToMarkups.ui
FiducialToModelDistance/: CMakeLists.txt  FiducialToModelDistance.py
FiducialToModelDistance/Resources/UI/: FiducialToModelDistance.ui
FiducialsToSurface/: CMakeLists.txt  FiducialsToSurface.py
FiducialsToSurface/Resources/UI/: FiducialsToSurface.ui
Fusion/: CMakeLists.txt  Fusion.py
Fusion/Resources/UI/: Fusion.ui
Fusion2/: CMakeLists.txt  Fusion2.py
Fusion2/Resources/UI/: Fusion2.ui
FuzzyClassification/: CMakeLists.txt  FuzzyClassification.py
FuzzyClassification/Resources/UI/: FuzzyClassification.ui
MTLEDSimulator/: CMakeLists.txt  MTLEDSimulator.py
MTLEDSimulator/Resources/UI/: MTLEDSimulator.ui
MVoxMeshGenerator/: CMakeLists.txt  MVoxMeshGenerator.py  MVoxMeshGenerator.xml
MarkspsToSurface/: CMakeLists.txt  Markupstosurfacemesh.py
MeshNodesToFiducials/: CMakeLists.txt  MeshNodesToFiducials.py
MeshNodesToFiducials/Resources/UI/: MeshNodesToFiducials.ui
NodeSelector/: CMakeLists.txt  NodeSelector.py
NodeSelector/Resources/UI/: NodeSelector.ui
SheetFromPoints/: CMakeLists.txt  README.md  SheetFromPoints.py  SheetFromPoints.xml
SkullGenerator/: CMakeLists.txt  SkullGenerator.py
SkullGenerator/Resources/UI/: SkullGenerator.ui
SurfaceTriangulation/: CMakeLists.txt  SurfaceTriangulation.py
SurfaceTriangulation/Resources/UI/: SurfaceTriangulation.ui
TetrahedralMeshGenerator/: CMakeLists.txt  TetrahedralMeshGenerator.py
TetrahedralMeshGenerator/Resources/UI/: TetrahedralMeshGenerator.ui
TumorResectionAndBRainRemodelling/: CMakeLists.txt  TumorResectionAndBRainRemodelling.py
TumorResectionAndBRainRemodelling/Resources/UI/: TumorResectionAndBRainRemodelling.ui
Visualisation/: CMakeLists.txt  Visualisation.py
Visualisation/Resources/UI/: Visualisation.ui
docs/: conf.py  index.md  index.rst
docs/_static/: custom.css
docs/modules/: index.md
docs/modules/mesh-grid/: CreateHeadTetrahedralGrid.md  computational-grid-generator.md
docs/modules/property/: FuzzyClassification.md
docs/tutorial/: craniotomy.md  electrode.md  index.md  tumor.md
docs/tutorial/application/: brain-model-construction.md
docs/tutorial/case-study/: craniotomy.md  electrode.md  tumor.md
